--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Solidaritätspakt</title>
+        <meta name="description" content="Website des Solidaridätspakts">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
@@ -21,29 +21,60 @@
 
         <!-- Add your site or application content here -->
 		<header>
-		
 			<nav id="menu" role="navigation">
-				<ul id="menu-one-page-hybrid-jump" class="menu">
-					<li id="menu-item-1" class="menu-item"><a href="#">Menu 1</a></li>
-					<li id="menu-item-3" class="menu-item"><a href="#">Menu 2</a></li>
-					<li id="menu-item-3" class="menu-item"><a href="#">Menu 3</a></li>
-					<li id="menu-item-4" class="menu-item"><a href="#">Menu 4</a></li>
-					<li id="menu-item-5" class="menu-item"><a href="#">Menu 5</a></li>
+				<ul id="menu-one-page" class="menu">
+					<li id="menu-item-1" class="menu-item"><a href="#solidaritaetspakt">Solidaritätspakt</a></li>
+					<li id="menu-item-3" class="menu-item"><a href="#unterzeichnerinnen">Unterzeichner*innen</a></li>
+					<li id="menu-item-3" class="menu-item"><a href="#unterzeichnen">Unterzeichnen</a></li>
+					<li id="menu-item-4" class="menu-item"><a href="#kontakt">Kontakt</a></li>
 				</ul>
 			</nav>
-			
 		</header>
-		
-		<section id="content">
-		
-			<p>Hello world! This is HTML5 Boilerplate.</p>
-			
-		</section>
-		
-		
+
+		<main id="content">
+      <section id="solidaritaetspakt">
+        <h1>Solidaritätspakt der Zivilgesellschaft</h1>
+        <p>Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen. Sollten einzelne Bevölkerungsgruppen oder Organisationen staatlicher Repression ausgesetzt werden, werden wir gemeinsam und solidarisch Beistand leisten und aktiv werden.</p>
+        <div class="aufklapper">
+          <p>Ohne eine lebendige und starke Zivilgesellschaft wäre es um Umweltschutz, Menschenrechte, Arbeitnehmer_innenrechte, soziale Gerechtigkeit, Gleichberechtigung und vieles mehr in Österreich schlecht bestellt. Ohne eine aktive und von Hunderttausenden unterstützte Zivilgesellschaft würden heute in Österreich Atomkraftwerke stehen, schutzsuchende Menschen müssten auf der Straße leben, das Versammlungsrecht wäre massiv eingeschränkt, eine Reihe von Rechten und Gleichstellungsmaßnahmen für Frauen gäbe es noch immer nicht, es gäbe keine starke Interessenvertretung der Arbeitnehmer_innen, keine innerbetriebliche Demokratie, keinen Antidiskriminierungsschutz. Und ohne die Möglichkeit wirksam und organisiert aktiv zu werden, würden Bürger_innen in vielen Fällen Unrecht, Umweltzerstörung, Ungleichbehandlung und Diskriminierung machtlos gegenüberstehen.</p>
+          <p>Gewerkschaften und die Zivilgesellschaft haben wesentlich dazu beigetragen, Österreich in einem hohen Maß lebenswert zu machen und die hier lebenden Menschen mit Freiheiten, Rechten und der Möglichkeit eines selbstbestimmten Lebens auszustatten. Doch all das steht immer öfter auf dem Spiel: In Teilen Europas breitet sich ein zunehmender Druck auf soziale Bewegungen, auf Freiheiten und soziale und ökologische Errungenschaften aus. Immer öfter setzen Regierungen Maßnahmen, die zivilgesellschaftliches Engagement einschränken. Immer öfter werden aktive Bürger_innen eingeschüchtert und bedroht. Auch in Österreich findet diese Entwicklung statt. In den vergangenen Monaten gab es vielfach Angriffe auf zentrale demokratische Freiheiten, Grundrechte, den Rechtsstaat, Arbeitnehmer_innenrechte und soziale Sicherheit.</p>
+          <p>Zu diesen Angriffen zählen u. a:</p>
+          <ul>
+            <li>Einschränkungen der Versammlungs- und Meinungsfreiheit, offline und online.</li>
+            <li>Abbau von rechtsstaatlichen Garantien, Grund- und Menschenrechten sowie Konventionen.</li>
+            <li>Einengung der politischen Freiräume durch repressive Maßnahmen gegen zivilgesellschaftliches Engagement, sei es durch die Verschärfung von Überwachungsmaßnahmen, die Diskreditierung von NGOs oder die Drohung Förderungen zu entziehen.</li>
+            <li>Kriminalisierung von politischer Aktivität und legitimen Formen des Protests.</li>
+            <li>Angriffe auf die demokratisch legitimierten Interessenvertretungen der Arbeitnehmer_innen und die innerbetriebliche Mitbestimmung.</li>
+            <li>Politische Einflussnahme auf die unabhängige Justiz, Angriffe auf und Anzeigen von Richter_innen.</li>
+            <li>Der Versuch, bei unliebsamen Gerichtsentscheidungen die Verfassung zu ändern, um andere politisch gewollte Ergebnisse&nbsp;herbeizuführen.</li>
+            <li>Abbau von Arbeitnehmer_innenrechten und Angriffe auf den Sozialstaat.</li>
+            <li>Gesellschaftliche Spaltung durch das Schüren von Vorurteilen und das Verunglimpfen von zivilgesellschaftlichem Engagement.</li>
+          </ul>
+          <p>Wir gehen davon aus, dass diese Angriffe auch in Zukunft fortgesetzt werden. In vielen Ländern innerhalb und außerhalb der EU greifen Regierungen zu ähnlichen Maßnahmen, um neoliberale Politik weiter durchzusetzen, die auf immer breiteren Widerstand der Bevölkerung trifft.</p>
+          <p>In einer funktionierenden Demokratie hat der Staat die Verpflichtung die Grundrechte der gesamten Bevölkerung zu schützen und demokratische Freiräume zu garantieren. Diese Freiräume und eine aktive und starke Zivilgesellschaft sind mehr denn je notwendig, um solidarische und emanzipatorische Antworten auf die gegenwärtigen Krisen zu entwickeln ‒ von der zunehmenden sozialen Ungleichheit über die Umwelt- und Klimakrise und zunehmend prekären Arbeitsverhältnissen bis hin zur Notwendigkeit der Weiterentwicklung unserer Demokratie. Wir stehen für diese solidarischen und emanzipatorischen Antworten und Alternativen, die wir mit den vielfältigen Formen des zivilgesellschaftlichen Engagements einbringen und vorantreiben.</p>
+        </div>
+      </section>
+
+      <section id="unterzeichnerinnen">
+        <h1>Unterzeichner*innen</h1>
+      </section>
+
+      <section id="unterzeichnen">
+        <h1>Den Solidaritätspakt unterzeichnen</h1>
+      </section>
+
+    </main>
+
+    <footer>
+      <div class="wrapper">
+        <div id="kontakt">Footerinhalt</div>
+      </div>
+    </footer>
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+        <script src="js/expander/jquery.expander.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
