--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
-
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/metropolis" type="text/css"/>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
@@ -33,7 +33,9 @@
 
 		<main id="content">
       <section id="solidaritaetspakt">
-        <h1>Solidaritätspakt der Zivilgesellschaft</h1>
+        <h1 id="logo">
+          <img src="img/solidaritaetspakt.png" title="Solidaritätspakt der Zivilgesellschaft" alt="Schriftzug des Solidaritätspakts mit sich gegenseitig haltenden Händen" />
+        </h1>
         <p>Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen. Sollten einzelne Bevölkerungsgruppen oder Organisationen staatlicher Repression ausgesetzt werden, werden wir gemeinsam und solidarisch Beistand leisten und aktiv werden.</p>
         <div class="aufklapper">
           <p>Ohne eine lebendige und starke Zivilgesellschaft wäre es um Umweltschutz, Menschenrechte, Arbeitnehmer_innenrechte, soziale Gerechtigkeit, Gleichberechtigung und vieles mehr in Österreich schlecht bestellt. Ohne eine aktive und von Hunderttausenden unterstützte Zivilgesellschaft würden heute in Österreich Atomkraftwerke stehen, schutzsuchende Menschen müssten auf der Straße leben, das Versammlungsrecht wäre massiv eingeschränkt, eine Reihe von Rechten und Gleichstellungsmaßnahmen für Frauen gäbe es noch immer nicht, es gäbe keine starke Interessenvertretung der Arbeitnehmer_innen, keine innerbetriebliche Demokratie, keinen Antidiskriminierungsschutz. Und ohne die Möglichkeit wirksam und organisiert aktiv zu werden, würden Bürger_innen in vielen Fällen Unrecht, Umweltzerstörung, Ungleichbehandlung und Diskriminierung machtlos gegenüberstehen.</p>
@@ -57,6 +59,19 @@
 
       <section id="unterzeichnerinnen">
         <h1>Unterzeichner*innen</h1>
+        <div id="erstunterzeichnerinnen">
+          <a target="_blank" href="http://www.volkshilfe.at/"><img src="img/unterzeichnerinnen/volkshilfe.png" title="Volkshilfe" /></a>
+          <a target="_blank" href="https://www.attac.at/"><img src="img/unterzeichnerinnen/attac.jpg" title="Attac Österreich" /></a>
+          <a target="_blank" href="https://epicenter.works/"><img src="img/unterzeichnerinnen/epicenter.jpg" title="Epicenter" /></a>
+          <a target="_blank" href="http://www.greenpeace.org/austria/de/"><img src="img/unterzeichnerinnen/greenpeace.png" title="Greenpeace" /></a>
+          <a target="_blank" href="http://www.vida.at/"><img src="img/unterzeichnerinnen/vida.jpg" title="Vida" /></a>
+          <a target="_blank" href="https://www.suedwind.at/"><img src="img/unterzeichnerinnen/suedwind.jpg" title="Südwind" /></a>
+          <a target="_blank" href="http://www.viacampesina.at/"><img src="img/unterzeichnerinnen/oebv.jpg" title="ÖBV - Via CAmpesina AUstria" /></a>
+          <a target="_blank" href="http://www.kaboe.at/"><img src="img/unterzeichnerinnen/kab.png" title="Katholische ArbeitnehmerInnen Bewegung Österreich" /></a>
+          <a target="_blank" href="https://www.global2000.at/"><img src="img/unterzeichnerinnen/global2000.jpg" title="Global 2000" /></a>
+          <a target="_blank" href="https://www.sosmitmensch.at/"><img src="img/unterzeichnerinnen/sosmitmensch.svg" title="SOS Mitmensch" /></a>
+          <a target="_blank" href="http://zwanzigtausendfrauen.at/"><img src="img/unterzeichnerinnen/Plattform_20000frauen.jpg" title="Plattform 20000 Frauen" /></a>
+        </div>
       </section>
 
       <section id="unterzeichnen">
