--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
 
     <footer>
       <div class="wrapper">
-        <div id="kontakt">Footerinhalt</div>
+        <section id="kontakt">
+          <h1>Solidaritätspakt der Zivilgesellschaft</h1>
+          <a href="mailto:kontakt@solidaritaetspakt.org">kontakt@solidaritaetspakt.org</a>
+        </section>
+        <section id="umsetzung">
+          Gestaltung und Umsetzung: <a target="_blank" href="https://www.convive.io/">Convive* Labor für das gute Leben</a>
+        </section>
       </div>
     </footer>
 
