--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
 
       <section id="unterzeichnen">
         <h1>Den Solidaritätspakt unterzeichnen</h1>
+          <div id="mainform">
+    				<form id="form">
+      				<p id="returnmessage"></p>
+              <label>Name der Organisation: <span>*</span></label>
+              <input type="text" id="name" placeholder="Name der Organisation"/>
+      				<label>Email: <span>*</span></label>
+              <input type="text" id="email" placeholder="Email"/>
+              <label>Telefonnummer: <span>*</span></label>
+              <input type="text" id="contact" placeholder="Telefonnummer"/>
+      				<label>Ihre Nachricht</label>
+              <textarea id="message" placeholder="Ihre Nachricht...."></textarea>
+      				<input type="button" id="submit" value="Nachricht Absenden"/>
+            </form>
+  		     </div>
       </section>
 
     </main>
