--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <p>Wir gehen davon aus, dass diese Angriffe auch in Zukunft fortgesetzt werden. In vielen Ländern innerhalb und außerhalb der EU greifen Regierungen zu ähnlichen Maßnahmen, um neoliberale Politik weiter durchzusetzen, die auf immer breiteren Widerstand der Bevölkerung trifft.</p>
           <p>In einer funktionierenden Demokratie hat der Staat die Verpflichtung die Grundrechte der gesamten Bevölkerung zu schützen und demokratische Freiräume zu garantieren. Diese Freiräume und eine aktive und starke Zivilgesellschaft sind mehr denn je notwendig, um solidarische und emanzipatorische Antworten auf die gegenwärtigen Krisen zu entwickeln ‒ von der zunehmenden sozialen Ungleichheit über die Umwelt- und Klimakrise und zunehmend prekären Arbeitsverhältnissen bis hin zur Notwendigkeit der Weiterentwicklung unserer Demokratie. Wir stehen für diese solidarischen und emanzipatorischen Antworten und Alternativen, die wir mit den vielfältigen Formen des zivilgesellschaftlichen Engagements einbringen und vorantreiben.</p>
         </div>
+        <a target="_blank" href="http://bit.ly/2fJNFy9"><img src="img/pk_foto_web.jpg" /></a>
       </section>
 
       <section id="unterzeichnerinnen">
