--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <label>Telefonnummer: <span>*</span></label>
               <input type="text" id="contact" placeholder="Telefonnummer"/>
       				<label>Ihre Nachricht</label>
-              <textarea id="message" placeholder="Ihre Nachricht...."></textarea>
+              <textarea id="message" placeholder="Ihre Nachricht..."></textarea>
       				<input type="button" id="submit" value="Nachricht Absenden"/>
             </form>
   		     </div>
