404 fast redirect to root + icon fix

--- a/404.html
+++ b/404.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="1;url=/">
+    <script type="text/javascript">
+        window.location.href = "/"
+    </script>
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
