--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
     				<form id="form">
       				<p id="returnmessage"></p>
               <label>Name der Organisation: <span>*</span></label>
-              <input type="text" id="name" placeholder="Name der Organisation"/>
-      				<label>Email: <span>*</span></label>
-              <input type="text" id="email" placeholder="Email"/>
+              <input type="text" id="oname" placeholder="Name der Organisation"/>
+              <label>Ihr Name: <span>*</span></label>
+              <input type="text" id="name" placeholder="Ihr Name"/>
+      				<label>E-Mail: <span>*</span></label>
+              <input type="text" id="email" placeholder="E-Mail"/>
               <label>Telefonnummer: <span>*</span></label>
               <input type="text" id="contact" placeholder="Telefonnummer"/>
       				<label>Ihre Nachricht</label>
