--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
       <div class="wrapper">
         <section id="kontakt">
           <h1>Solidaritätspakt der Zivilgesellschaft</h1>
-          <a href="mailto:kontakt@solidaritaetspakt.org">kontakt@solidaritaetspakt.org</a>
+          <a href="mailto:kontakt@solidaritaetspakt.org">kontakt@solidaritaetspakt.org</a><br />
+          <h1>Impressum</h1>
+          <a target="_blank" href="https://epicenter.works/kontakt">epicenter.works - Plattform Grundrechtspolitik</a>
+          <br />Annagasse 8/1/8, 1010 Wien
+          <br />ZVR-Zahl: 140062668
         </section>
         <section id="umsetzung">
           Gestaltung und Umsetzung: <a target="_blank" href="https://www.convive.io/">Convive* Labor für das gute Leben</a>
