Google site verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Solidaritätspakt</title>
         <meta name="description" content="Website des Solidaridätspakts">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-site-verification" content="o1Ngnk1o3QUAWFD8j7FMewzXeey2XFa5aM8Bdvjj0YY" />
 
         <link rel="icon" type="image/png" href="icon.png">
         <link rel="manifest" href="site.webmanifest">
