--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
       <section id="unterzeichnerinnen">
         <h1>Unterzeichner*innen</h1>
         <ul>
-          <li>Welten des Wandels</li>
-          <li>Förderverein kontemplativer Kontemplationen</li>
+          <li><a href="http://systemchange-not-climatechange.at/">System Change, not Climate Change!</a></li>
         </ul>
       </section>
 
