--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section id="unterzeichnerinnen">
         <h1>Unterzeichner*innen</h1>
         <ul>
-          <li><a href="http://systemchange-not-climatechange.at/">System Change, not Climate Change!</a></li>
+          <li><a target="_blank" href="http://systemchange-not-climatechange.at/">System Change, not Climate Change!</a></li>
         </ul>
       </section>
 
