--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
           <a target="_blank" href="https://www.global2000.at/"><img src="img/unterzeichnerinnen/global2000.jpg" title="Global 2000" /></a>
           <a target="_blank" href="http://www.greenpeace.org/austria/de/"><img src="img/unterzeichnerinnen/gpoe.png" title="Greenpeace" /></a>
           <a target="_blank" href="http://www.kaboe.at/"><img src="img/unterzeichnerinnen/kab.png" title="Katholische ArbeitnehmerInnen Bewegung Österreich" /></a>
-          <a target="_blank" href="http://www.viacampesina.at/"><img src="img/unterzeichnerinnen/oebv.jpg" title="ÖBV - Via CAmpesina AUstria" /></a>
+          <a target="_blank" href="http://www.viacampesina.at/"><img src="img/unterzeichnerinnen/oebv.jpg" title="ÖBV - Via Campesina AUstria" /></a>
           <a target="_blank" href="https://www.sosmitmensch.at/"><img src="img/unterzeichnerinnen/sosmitmensch.svg" title="SOS Mitmensch" /></a>
           <a target="_blank" href="https://www.suedwind.at/"><img src="img/unterzeichnerinnen/suedwind.jpg" title="Südwind" /></a>
+          <a target="_blank" href="http://www.freie-radios.at/"><img src="img/unterzeichnerinnen/VFR_Logo.png" title="Verband Freier Radios Österreich" /></a>
           <a target="_blank" href="http://www.vida.at/"><img src="img/unterzeichnerinnen/vida.jpg" title="Vida" /></a>
           <a target="_blank" href="http://www.volkshilfe.at/"><img src="img/unterzeichnerinnen/volkshilfe.png" title="Volkshilfe" /></a>
           <a target="_blank" href="http://zwanzigtausendfrauen.at/"><img src="img/unterzeichnerinnen/Plattform_20000frauen.jpg" title="Plattform 20000 Frauen" /></a>
