--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Solidaritätspakt</title>
-        <meta name="description" content="Website des Solidaridätspakts">
+        <meta name="description" content="Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-site-verification" content="o1Ngnk1o3QUAWFD8j7FMewzXeey2XFa5aM8Bdvjj0YY" />
+        <meta property="og:title" content="Zivilgesellschaftlicher Solidaritätspakt" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://solidaritaetspakt.org/" />
+        <meta property="og:image" content="img/solidaritaetspakt.png" />
+        <meta property="og:description" content="Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen." />
 
         <link rel="icon" type="image/png" href="icon.png">
         <link rel="manifest" href="site.webmanifest">
@@ -36,7 +41,7 @@
 		<main id="content">
       <section id="solidaritaetspakt">
         <h1 id="logo">
-          <img src="img/solidaritaetspakt.png" title="Solidaritätspakt der Zivilgesellschaft" alt="Schriftzug des Solidaritätspakts mit sich gegenseitig haltenden Händen" />
+          <img src="img/solidaritaetspakt.png" title="Zivilgesellschaftlicher Solidaritätspakt" alt="Schriftzug des Solidaritätspakts mit sich gegenseitig haltenden Händen" />
         </h1>
         <p>Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen. Sollten einzelne Bevölkerungsgruppen oder Organisationen staatlicher Repression ausgesetzt werden, werden wir gemeinsam und solidarisch Beistand leisten und aktiv werden.</p>
         <div class="aufklapper">
