--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Solidaritätspakt</title>
-        <meta name="description" content="Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen.">
+        <meta name="description" content="	Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-site-verification" content="o1Ngnk1o3QUAWFD8j7FMewzXeey2XFa5aM8Bdvjj0YY" />
         <meta property="og:title" content="Zivilgesellschaftlicher Solidaritätspakt" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://solidaritaetspakt.org/" />
         <meta property="og:image" content="img/solidaritaetspakt.png" />
-        <meta property="og:description" content="Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen." />
+        <meta property="og:description" content="	Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab." />
 
         <link rel="icon" type="image/png" href="icon.png">
         <link rel="manifest" href="site.webmanifest">
