--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Solidaritätspakt</title>
+        <title>Solidaritätspakt der Zivilgesellschaft</title>
         <meta name="description" content="	Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-site-verification" content="o1Ngnk1o3QUAWFD8j7FMewzXeey2XFa5aM8Bdvjj0YY" />
-        <meta property="og:title" content="Zivilgesellschaftlicher Solidaritätspakt" />
+        <meta property="og:title" content="Solidaritätspakt der Zivilgesellschaft" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://solidaritaetspakt.org/" />
-        <meta property="og:image" content="img/solidaritaetspakt.png" />
+        <meta property="og:image" content="https://solidaritaetspakt.org/img/pk_foto_web.jpg" />
         <meta property="og:description" content="	Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab." />
 
         <link rel="icon" type="image/png" href="icon.png">
@@ -41,7 +41,7 @@
 		<main id="content">
       <section id="solidaritaetspakt">
         <h1 id="logo">
-          <img src="img/solidaritaetspakt.png" title="Zivilgesellschaftlicher Solidaritätspakt" alt="Schriftzug des Solidaritätspakts mit sich gegenseitig haltenden Händen" />
+          <img src="img/solidaritaetspakt.png" title="Solidaritätspakt der Zivilgesellschaft" alt="Schriftzug des Solidaritätspakts mit sich gegenseitig haltenden Händen" />
         </h1>
         <p>Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab. Wir verpflichten uns gemeinsam ‒ so wie bisher ‒ unsere Stimme zu erheben und uns für den Erhalt und den Ausbau grundlegender Rechte sowie der rechtlichen, wirtschaftlichen und sozialen Rahmenbedingungen für zivilgesellschaftliches und gewerkschaftliches Handeln und Demokratie einzusetzen. Sollten einzelne Bevölkerungsgruppen oder Organisationen staatlicher Repression ausgesetzt werden, werden wir gemeinsam und solidarisch Beistand leisten und aktiv werden.</p>
         <div class="aufklapper">
