--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Solidaritätspakt der Zivilgesellschaft" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://solidaritaetspakt.org/" />
-        <meta property="og:image" content="https://solidaritaetspakt.org/img/pk_foto_web.jpg" />
+        <meta property="og:image" content="https://convive-lab.github.io/solidaritaetspakt/img/pk_foto_web.jpg" />
         <meta property="og:description" content="	Angesichts bedrohlicher Entwicklungen für die Demokratie in Österreich schließen die unterzeichnenden Organisationen einen Solidaritätspakt für den Schutz und Ausbau von zivilgesellschaftlichen Handlungsspielräumen, sozialer Sicherheit und Demokratie ab." />
 
         <link rel="icon" type="image/png" href="icon.png">
