Eintragung Radio Orange

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <section id="unterzeichnerinnen">
         <h1>Unterzeichner*innen</h1>
         <ul>
-        
+        <li><a target="_blank" href="http://o94.at/">Radio Orange 94.0</a></li>
         </ul>
       </section>
 
