Eintragung VGT, #aufstehn

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         <h1>Unterzeichner*innen</h1>
         <ul>
 <li><a target="_blank" href="http://o94.at/">Radio Orange 94.0</a></li>
+<li><a target="_blank" href="https://vgt.at/">Verein Gegen Tierfabriken</a></li>
+<li><a target="_blank" href="https://www.aufstehn.at/">#aufstehn – Verein zur Förderung zivilgesellschaftlicher Partizipation</a></li>
         </ul>
       </section>
 
