Eintragung TdU, entschleunigung und orientierung, System Change, Betriebsrat AIT, SOL, Aktion21, transform!at, AUGE/UG, NeSoVe

--- a/index.html
+++ b/index.html
@@ -113,9 +113,18 @@
         <h1>Unterzeichner*innen</h1>
         <ul>
 <li><a target="_blank" href="https://www.aufstehn.at/">#aufstehn – Verein zur Förderung zivilgesellschaftlicher Partizipation</a></li>
+<li><a target="_blank" href="http://www.aktion21.at/">Aktion21 - pro Bürgerbeteiligung</a></li>
+<li><a target="_blank" href="https://auge.or.at/">AUGE/UG</a></li>
+<li><a target="_blank" href="https://www.ait.ac.at/#/">Betriebsrat des AIT Austrian Institute of Technology</a></li>
+<li><a target="_blank" href="http://www.alterskompetenzen.info/">entschleunigung und orientierung - institut für alterskompetenzen</a></li>
 <li><a target="_blank" href="https://fian.at/">FIAN Österreich</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
+<li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
 <li><a target="_blank" href="http://o94.at/">Radio Orange 94.0</a></li>
+<li><a target="_blank" href="http://www.nachhaltig.at/">SOL - Menschen für Solidarität, Ökologie und Lebensstil</a></li>
+<li><a target="_blank" href="http://systemchange-not-climatechange.at/">System Change, not Climate Change!</a></li>
+<li><a target="_blank" href="http://tdu-wien.at/">Theater der Unterdrückten Wien</a></li>
+<li><a target="_blank" href="http://transform.or.at/news/">transform!at</a></li>
 <li><a target="_blank" href="https://vgt.at/">Verein Gegen Tierfabriken</a></li>
         </ul>
       </section>
