Eintragung IG Milch

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <li><a target="_blank" href="https://auge.or.at/">AUGE/UG</a></li>
 <li><a target="_blank" href="http://www.alterskompetenzen.info/">entschleunigung und orientierung - institut für alterskompetenzen</a></li>
 <li><a target="_blank" href="https://fian.at/">FIAN Österreich</a></li>
+<li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
 <li><a target="_blank" href="http://o94.at/">Radio Orange 94.0</a></li>
