Eintragung: OBRA, Knack:Punkt, SLIÖ, Radio Agora, Radio Freirad, Radio B138, Radio Helsinki

--- a/index.html
+++ b/index.html
@@ -113,14 +113,21 @@
         <h1>Unterzeichner*innen</h1>
         <ul>
 <li><a target="_blank" href="https://www.aufstehn.at/">#aufstehn – Verein zur Förderung zivilgesellschaftlicher Partizipation</a></li>
+<li><a target="_blank" href="http://agora.at/">AGORA – Verein Arbeitsgemeinschaft offenes Radio</a></li>
 <li><a target="_blank" href="http://www.aktion21.at/">Aktion21 - pro Bürgerbeteiligung</a></li>
 <li><a target="_blank" href="https://auge.or.at/">AUGE/UG</a></li>
 <li><a target="_blank" href="http://www.alterskompetenzen.info/">entschleunigung und orientierung - institut für alterskompetenzen</a></li>
 <li><a target="_blank" href="https://fian.at/">FIAN Österreich</a></li>
+<li><a target="_blank" href="http://www.radio-b138.at/index.php">Freies Radio B138</a></li>
+<li><a target="_blank" href="http://www.freirad.at/">Freies Radio Innsbruck FREIRAD</a></li>
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
+<li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
+<li><a target="_blank" href="http://1billionrising.at/">OBRA - One Billion Rising Austria</a></li>
+<li><a target="_blank" href="http://helsinki.at/">Radio Helsinki - Freies Radio Graz</a></li>
 <li><a target="_blank" href="http://o94.at/">Radio Orange 94.0</a></li>
+<li><a target="_blank" href="http://www.slioe.at/">Selbstbestimmt Leben Österreich (SLIÖ)</a></li>
 <li><a target="_blank" href="http://www.nachhaltig.at/">SOL - Menschen für Solidarität, Ökologie und Lebensstil</a></li>
 <li><a target="_blank" href="http://systemchange-not-climatechange.at/">System Change, not Climate Change!</a></li>
 <li><a target="_blank" href="http://tdu-wien.at/">Theater der Unterdrückten Wien</a></li>
