Eintragung PRO-GE

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 <li><a target="_blank" href="https://fian.at/">FIAN Österreich</a></li>
 <li><a target="_blank" href="http://www.radio-b138.at/index.php">Freies Radio B138</a></li>
 <li><a target="_blank" href="http://www.freirad.at/">Freies Radio Innsbruck FREIRAD</a></li>
+<li><a target="_blank" href="http://www.proge.at">Gewerkschaft PRO-GE</a></li>
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
 <li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
