Eintragung mehr demokratie!, WWF

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <li><a target="_blank" href="http://www.proge.at">Gewerkschaft PRO-GE</a></li>
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
 <li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
+<li><a target="_blank" href="http://mehr-demokratie.at/">mehr demokratie!</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
 <li><a target="_blank" href="http://1billionrising.at/">OBRA - One Billion Rising Austria</a></li>
@@ -133,6 +134,7 @@
 <li><a target="_blank" href="http://tdu-wien.at/">Theater der Unterdrückten Wien</a></li>
 <li><a target="_blank" href="http://transform.or.at/news/">transform!at</a></li>
 <li><a target="_blank" href="https://vgt.at/">Verein Gegen Tierfabriken</a></li>
+<li><a target="_blank" href="https://www.wwf.at/">WWF Österreich</a></li>
         </ul>
       </section>
 
